creusot/tests/should_fail/terminates/complicated_traits_recursion.stderr
error: Mutually recursive functions: when calling `bar`...
  --> complicated_traits_recursion.rs:18:1
   |
18 | / fn bar<I>(_: I)
19 | | where
20 | |     I: Iterator,
21 | |     I::Item: Foo,
   | |_________________^
   |
note: then `bar` calls `<i32 as Foo>::foo`...
  --> complicated_traits_recursion.rs:23:5
   |
23 |     I::Item::foo()
   |     ^^^^^^^^^^^^^^
note: finally `<i32 as Foo>::foo` calls `bar`.
  --> complicated_traits_recursion.rs:13:9
   |
13 |         bar::<std::iter::Once<i32>>(std::iter::once(1i32));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

